# sumo-provision

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  architecture.md  compose.towers.yml  docker-compose.yml  install-deps.sh  rust-toolchain.toml  rustfmt.toml  start.sh  towers-up.sh
.github/workflows/: fmt.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  vhsm.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/identity-tower/: Cargo.toml
crates/identity-tower/migrations/: 0001_devices.sql  0002_device_certs.sql  0003_per_key_certs.sql
crates/identity-tower/src/: ca.rs  delegated_rights.rs  devices.rs  keystore.rs  main.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: lib.rs
crates/software-tower/: Cargo.toml  build.rs
crates/software-tower/examples/: bench_encrypt.rs
crates/software-tower/migrations/: 0001_artifacts.sql  0002_releases.sql  0003_release_identity.sql  0004_release_identity_is_content.sql  0005_channel_targets.sql  0006_target_release_config_snapshot.sql  0007_channel_target_device_arch.sql
crates/software-tower/src/: content.rs  crypto.rs  main.rs  releases.rs  signer.rs  store.rs
crates/wire/: Cargo.toml
crates/wire/src/: lib.rs
