[workspace]
resolver = "2"
members = [
    "crates/wire",
    "crates/identity-tower",
    "crates/software-tower",
    "crates/orchestrator",
    "crates/client",
    "crates/cli",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
# license: TBD before this repository is made public (see README.md).

[workspace.dependencies]
# internal
wire = { path = "crates/wire" }
client = { path = "crates/client" }
orchestrator = { path = "crates/orchestrator" }

# external — SOVD client lib (open-source; git-pinned now, published dep later)
sovd-client = { git = "https://github.com/sdv-playground/SOVDd.git", branch = "main" }
# external — sumo-rs SUIT toolkit (open-source): encrypt-once + per-device CEK
# rewrap, manifest signing. Tower 2 reuses it so we don't fork the envelope format.
sumo-offboard = { git = "https://github.com/tr-sdv-sandbox/sumo-rs.git", branch = "main" }
# sumo-onboard + sumo-crypto + coset: device-side validate/decrypt, used by the
# signer's roundtrip test (dev-only) to prove envelopes verify and decrypt.
sumo-onboard = { git = "https://github.com/tr-sdv-sandbox/sumo-rs.git", branch = "main" }
sumo-crypto = { git = "https://github.com/tr-sdv-sandbox/sumo-rs.git", branch = "main" }
coset = "0.3"

# async runtime + http
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "signal"] }
tokio-util = { version = "0.7", features = ["io"] }
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
futures = "0.3"

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# cli + config
clap = { version = "4", features = ["derive", "env"] }

# observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# errors
anyhow = "1"
thiserror = "1"

# hashing + encoding
sha2 = "0.10"
hex = "0.4"

# database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "migrate", "macros"] }

# crypto
aes-gcm = "0.10"
rand = "0.8"

# trait helpers
async-trait = "0.1"

# test helpers
tempfile = "3"

# Optimize dependencies even in dev builds. The crypto crates (aes, ghash, sha2,
# sumo-crypto) are ~100x faster at opt-level 3 — with AES-NI codegen and inlining —
# so streaming a bank image (hundreds of MB) through sumo-hub's encrypt-once is
# quick even when the towers run as debug binaries. Workspace crates stay at
# opt-level 0: fast incremental compiles, fully debuggable. This is the reason we
# don't need a full `--release` build of the towers just for acceptable throughput.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
