[workspace]
resolver = "2"
members = [
    "crates/wire",
    "crates/identity-tower",
    "crates/software-tower",
    "crates/orchestrator",
    "crates/client",
    "crates/cli",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
# license: TBD before this repository is made public (see README.md).

[workspace.dependencies]
# internal
wire = { path = "crates/wire" }
client = { path = "crates/client" }
orchestrator = { path = "crates/orchestrator" }

# external — SOVD client lib (open-source; git-pinned now, published dep later)
sovd-client = { git = "https://github.com/sdv-playground/SOVDd.git", branch = "main" }
# external — shared SOVD flash execution engine (FlashPlan → guard → stage →
# reset → verdict). rig is a thin adapter over it; campaign + onboard share it.
sumo-sovd-flash-engine = { git = "https://github.com/sdv-playground/sumo-sovd.git", branch = "main" }
# external — HSM keystore schema (HsmKeystore / KeySlot / payload::encode + the
# factory signing keys + KeyRole). default-features=false → schema + enums only
# (no suit/crypto, no sumo-rs pull). Tower 1 mints the keystore against this.
hsm = { git = "https://github.com/sdv-playground/sumo-machine-manager.git", branch = "main", default-features = false }
# external — the vHSM wire/contract crate. The CLI's off-box CWT minter imports
# the CWT claim labels + audience from vhsm_proto::cwt — the same definitions
# the on-device daemon validates against, so the two ends cannot drift.
vhsm-proto = { git = "https://github.com/sdv-playground/sumo-machine-manager.git", branch = "main" }
# external — sumo-rs SUIT toolkit (open-source): encrypt-once + per-device CEK
# rewrap, manifest signing. Tower 2 reuses it so we don't fork the envelope format.
sumo-offboard = { git = "https://github.com/tr-sdv-sandbox/sumo-rs.git", tag = "v0.1.2" }
# sumo-codec: the SUIT CBOR codec (`decode_envelope`). The orchestrator decodes the
# Tower-2 signed L1 campaign (and its embedded L2 images) to fan out the per-device
# push — decode-only, no signing/crypto.
sumo-codec = { git = "https://github.com/tr-sdv-sandbox/sumo-rs.git", tag = "v0.1.2" }
# sumo-onboard + sumo-crypto + coset: device-side validate/decrypt, used by the
# signer's roundtrip test (dev-only) to prove envelopes verify and decrypt.
sumo-onboard = { git = "https://github.com/tr-sdv-sandbox/sumo-rs.git", tag = "v0.1.2" }
sumo-crypto = { git = "https://github.com/tr-sdv-sandbox/sumo-rs.git", tag = "v0.1.2" }
coset = "0.3"
# ciborium: CBOR values/serde for the CWT claim map (coset 0.3 exchanges
# ciborium::value::Value in its public API, so the versions travel together).
ciborium = "0.2"
# zstd: compress published artifacts *before* encrypt-once, matching sumo-offboard's
# producer (level 3). The device sniffs the zstd frame magic in the first decrypted
# bytes and decompresses — no manifest flag, so the blob just has to be compressed.
zstd = "0.13"

# async runtime + http
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "signal"] }
tokio-util = { version = "0.7", features = ["io"] }
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
futures = "0.3"

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# cli + config
clap = { version = "4", features = ["derive", "env"] }

# observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# errors
anyhow = "1"
thiserror = "1"

# hashing + encoding
# `oid` so Sha256: AssociatedOid — x509-cert needs it to emit ecdsa-with-SHA256.
sha2 = { version = "0.10", features = ["oid"] }
hex = "0.4"

# database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "migrate", "macros"] }

# crypto
aes-gcm = "0.10"
rand = "0.8"
# X.509 CA (Tower 1): sign the device CSR → a clientAuth device cert, on the
# der/spki/p256 stack already in the lock (no openssl/ring). x509-cert 0.2 tracks der 0.7.
x509-cert = { version = "0.2", features = ["std", "pem", "builder"] }
p256 = { version = "0.13", features = ["ecdsa", "pkcs8", "pem", "std"] }
const-oid = { version = "0.9", features = ["db"] }

# trait helpers
async-trait = "0.1"

# test helpers
tempfile = "3"

# Optimize dependencies even in dev builds. The crypto crates (aes, ghash, sha2,
# sumo-crypto) are ~100x faster at opt-level 3 — with AES-NI codegen and inlining —
# so streaming a bank image (hundreds of MB) through sumo-hub's encrypt-once is
# quick even when the towers run as debug binaries. Workspace crates stay at
# opt-level 0: fast incremental compiles, fully debuggable. This is the reason we
# don't need a full `--release` build of the towers just for acceptable throughput.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
