[package]
name = "identity-tower"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "sumo-ca"
path = "src/main.rs"

[dependencies]
wire = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
hsm = { workspace = true }
sumo-offboard = { workspace = true }
coset = { workspace = true }
x509-cert = { workspace = true }
p256 = { workspace = true }
const-oid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
# Read back the minted manifest to assert it carries the signing time (iat).
sumo-onboard = { workspace = true }
sumo-codec = { git = "https://github.com/tr-sdv-sandbox/sumo-rs.git", tag = "v0.1.2" }
