[package]
name = "orchestrator"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
wire = { workspace = true }
client = { workspace = true }
sovd-client = { workspace = true }
sumo-sovd-flash-engine = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
