[package]
name = "orchestrator"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
wire = { workspace = true }
client = { workspace = true }
sovd-client = { workspace = true }
sumo-sovd-flash-engine = { workspace = true }
# decode the Tower-2 signed L1 campaign + its embedded L2 images (fan out the push).
# sumo-codec = the CBOR `decode_envelope`; sumo-onboard::Manifest = typed per-component
# accessors (component_id / uri / count / image_digest) that track the SUIT
# component index for us.
sumo-codec = { workspace = true }
sumo-onboard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
# structured log of each component's push decision (copy-forward vs full).
tracing = { workspace = true }

[dev-dependencies]
# build a signed L1 (campaign of L2 images) in-test to exercise the fan-out decode.
sumo-offboard = { workspace = true }
