[package]
name = "software-tower"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "sumo-hub"
path = "src/main.rs"

[dependencies]
wire = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
sumo-offboard = { workspace = true }
aes-gcm = { workspace = true }
async-trait = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
sumo-onboard = { workspace = true }
sumo-crypto = { workspace = true }
coset = { workspace = true }
