[package]
name = "software-tower"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "sumo-hub"
path = "src/main.rs"

[dependencies]
wire = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
axum = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
sumo-offboard = { workspace = true }
sumo-crypto = { workspace = true }
zstd = { workspace = true }
aes-gcm = { workspace = true }
async-trait = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
sumo-onboard = { workspace = true }
coset = { workspace = true }
serde_json = { workspace = true }
tower = { version = "0.5", features = ["util"] }
